# candle_aggregator_benchmark

./: Cargo.toml  README.md
src/: bench.rs  data.rs  main.rs
src/engines/: mod.rs
