[package]
name = "candle_aggregator_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
subprocess = "0.2"
rand = "0.8"
candle_generator = { path = "../candle_generator" }

[dev-dependencies] 